--- a/jamboree.ipynb
+++ b/jamboree.ipynb
@@ -5,16 +5,9 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [
-        "UBueSXwNrMKj",
-        "sXszdcHzE5BT",
-        "pwmCk4jxgW1F",
-        "f5xUAUYK9_EZ",
-        "LUOkjV1oSzzP",
-        "f_aSVC7OezJJ",
-        "f59b07ba",
-        "43b59a27"
+        "UBueSXwNrMKj"
       ],
-      "authorship_tag": "ABX9TyMYPwTOT5FgtjMZu9nVDd5E",
+      "authorship_tag": "ABX9TyNJc94aF8Jgq8s2P90Q88Dc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1189,7 +1182,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 829
+          "height": 1000
         },
         "id": "8f96e3b8",
         "outputId": "7e2e7ae2-1270-48b1-daa1-a53e47698bc8"
@@ -5024,7 +5017,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 470
+          "height": 763
         },
         "id": "47200270",
         "outputId": "9238c702-87bb-4b48-9dab-ecffb7d774fd"
@@ -5125,7 +5118,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 470
+          "height": 763
         },
         "id": "647c31b0",
         "outputId": "237f6d8d-9d30-4dab-9e0f-526de5dbcfb9"
@@ -5432,6 +5425,37 @@
         "*   The model is suitable for providing estimates of the 'Chance of Admit' based on the input features.\n",
         "*   Further improvements might be explored by considering more complex models, feature engineering, or collecting more data, but the current model provides a solid baseline."
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "d0c9d081"
+      },
+      "source": [
+        "### **Final Insight and Recommendation**\n",
+        "\n",
+        "**Insight:**\n",
+        "\n",
+        "*   The project successfully analyzed the dataset to understand the key factors influencing graduate admissions and built a predictive model to estimate an individual's 'Chance of Admit', directly aligning with Jamboree's goal.\n",
+        "*   Through exploratory data analysis and interpreting the linear regression model coefficients (particularly after addressing multicollinearity), we identified that **CGPA, GRE Score, TOEFL Score, LOR strength, and Research experience** are statistically significant predictors of the chance of admission.\n",
+        "*   While University Rating and SOP strength also show positive associations, their individual significance might be influenced by their correlations with other features.\n",
+        "*   The final linear regression model achieved a good predictive performance (as indicated by the R-squared and low error metrics on the test set), demonstrating its capability to provide reasonable estimates of admission probability.\n",
+        "\n",
+        "**Recommendation:**\n",
+        "\n",
+        "*   The trained linear regression model and the insights gained about the key influencing factors ('CGPA', 'GRE Score', 'TOEFL Score', 'LOR ', 'Research') can be valuable tools for Jamboree, providing more personalized guidance to students, advising them on areas to focus on to improve their admission prospects (e.g., aiming for higher GRE/TOEFL/CGPA scores, strengthening LORs, or gaining research experience).\n",
+        "*   The model can be integrated into their online tool to provide Indian applicants with a data-driven estimate of their 'Chance of Admit' to Ivy League colleges.\n",
+        "*   It is recommended to monitor the model's performance over time and retrain it periodically with new data to ensure its continued accuracy and relevance."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "TA9YTcavyTjY"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
